--- a/README
+++ b/README
@@ -13,4 +13,4 @@ Check back each week to find out the neighborhood with the highest number of roa
 Roach Map by Niles Brooks, Jim Colgan, Max Schron, John Myles White and Chrys Wu is licensed under 
 a Creative Commons Attribution-ShareAlike 3.0 Unported License.
 
-We created it Nov. 6 & 7, 2010, at The Great Urban Hack NYC: http://greaturbanhack.com.
+We created it Nov. 6 & 7, 2010, at The Great Urban Hack NYC: http://greaturbanhack.com
