--- a/README
+++ b/README
@@ -10,7 +10,7 @@ where city health inspectors are reporting roach sightings on any given week.
 
 Check back each week to find out the neighborhood with the highest number of roach infestations.
 
-Roach Map by Niles Brooks, Jim Colgan, Max Schron, John Myles White and Chrys Wu is licensed under 
+Roach Map (http://roachmap.com) by Niles Brooks, Jim Colgan, Max Schron, John Myles White and Chrys Wu is licensed under 
 a Creative Commons Attribution-ShareAlike 3.0 Unported License.
 
 We created it Nov. 6 & 7, 2010, at The Great Urban Hack NYC: http://greaturbanhack.com
