--- a/README
+++ b/README
@@ -10,7 +10,8 @@ where city health inspectors are reporting roach sightings on any given week.
 
 Check back each week to find out the neighborhood with the highest number of roach infestations.
 
-Roach Map (http://roachmap.com) by Max Shron, Chrys Wu, Jim Colgan, John Myles White and Niles Brooks, (collectively known as "Drawing Conclusions") is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License.
+Roach Map (http://roachmap.com) by Max Shron, Chrys Wu, Jim Colgan, John Myles White and Niles Brooks, 
+(collectively known as "Drawing Conclusions") is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License.
 
 We created it Nov. 6 & 7, 2010, at The Great Urban Hack NYC event organized by Hacks/Hackers NYC and hosted at Eyebeam Art + Technology Center: http://greaturbanhack.com
 
